--- a/Product_manager/client/src/components/Product.css
+++ b/Product_manager/client/src/components/Product.css
@@ -1,9 +1,16 @@
-.main {
+.main{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
   }
+  .products{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+  } 
   
   .form {
     margin-top: 70px;
